# sambatui

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  SECURITY.md  cog.toml  hk.pkl  mise.toml  pyproject.toml  renovate.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: check.yml  release.yml
src/sambatui/: __init__.py  app.py  app_constants.py  app_layout.py  app_navigation.py  client.py  config.py  discovery.py  dns.py  ldap_directory.py  ldap_sidebar.py  models.py  remediation.py  screens.py  settings.py  smart_view_catalog.py  smart_views.py
src/sambatui/ui/: details.py  styles.py  tables.py
tests/: test_app.py  test_client.py  test_core_coverage.py  test_discovery.py  test_ldap_directory.py  test_ldap_sidebar.py  test_navigation.py  test_screens.py  test_smart_views.py
