[project]
name = "sambatui"
version = "0.1.0"
description = "Textual TUI for managing Samba services"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Karl Hans Laurits", email = "karl@laurits.dev"}]
dependencies = [
    "textual>=8.2.5",
]

[project.scripts]
sambatui = "sambatui.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
