[project]
name = "sambatui"
version = "0.1.0"
description = "Textual TUI for managing Samba services"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Karl Hans Laurits", email = "karl@laurits.dev" }]
dependencies = [
  "dnspython>=2.8.0",
  "ldap3>=2.9.1",
  "textual>=8.2.5",
]

[project.urls]
Homepage = "https://github.com/lauritsk/sambatui"
Issues = "https://github.com/lauritsk/sambatui/issues"

[project.scripts]
sambatui = "sambatui.app:main"

[dependency-groups]
dev = [
  "hypothesis>=6.152.3",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
